Fix custom select height on ios

--- a/src/ui/components/form.scss
+++ b/src/ui/components/form.scss
@@ -212,6 +212,7 @@ select.ln-form-select {
     background: $lnx-tertiary-surface-color;
     color: $lnx-primary-text-color;
     outline: none;
+    height: 100%;
 
     border-radius: $control-border-radius;
 
